--- a/docs/src/index.css
+++ b/docs/src/index.css
@@ -1,5 +1,11 @@
+html {
+  font-size: 16px!important;
+}
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+#root {
+  height: 100%;
 }
