--- a/lib/timeline/component/css/item.css
+++ b/lib/timeline/component/css/item.css
@@ -193,3 +193,26 @@
 .timeline-range.timeline-item.timeline-readonly .timeline-drag-right {
   cursor: auto;
 }
+
+.timeline-item.vis-cluster {
+  vertical-align: center;
+  text-align: center;
+  border-style: solid;
+  border-radius: 2px;
+}
+
+.timeline-item.timeline-cluster-line {
+  padding: 0;
+  position: absolute;
+  width: 0;
+  border-left-width: 1px;
+  border-left-style: solid;
+}
+
+.timeline-item.timeline-cluster-dot {
+  position: absolute;
+  padding: 0;
+  border-width: 4px;
+  border-style: solid;
+  border-radius: 4px;
+}
