Fixes issue #63 which caused group drag and reorder to behave inconsistently.

--- a/lib/timeline/component/css/labelset.css
+++ b/lib/timeline/component/css/labelset.css
@@ -25,6 +25,10 @@
   cursor: pointer;
 }
 
+.timeline-group-is-dragging {
+  background: rgba(0, 0, 0, .1);
+}
+
 .timeline-labelset .timeline-label:last-child {
   border-bottom: none;
 }
